discussion/kv_engine/183948/183948_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-00000: CDC update workload microbenchmark

Change-Id: Ib54c80c79d29aa06f7e5932a4c08880c232c0b0f

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-12-12 07:05:31.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-12-12 07:05:43.000000000
Message: 
Patch Set 1: Well-Formed-1

Branch restricted. PLEASE READ this URL: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/328881/artifact/restricted.html : FAILURE
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-12-12 08:14:41.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/682/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/benchmarks/vbucket_bench.cc:870:31: error: invalid use of incomplete type "Collections::Manifest" [clang-diagnostic-error]
        vb.updateFromManifest(Collections::Manifest{std::string{manifest}});
                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kv_bucket_iface.h:55:7: note: forward declaration of "Collections::Manifest"
class Manifest;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/benchmarks/vbucket_bench.cc:878:22: error: use of undeclared identifier "makeStoredDocKey" [clang-diagnostic-error]
    const auto key = makeStoredDocKey("key", collection);
                     ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/682/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/benchmarks/vbucket_bench.cc:870:31:
error: invalid use of incomplete type "Collections::Manifest" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/682/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/852/ : FAILURE

Failure of GoogleTest "EphemeralBucketStatTest.VBSeqlistStats":

<pre>
[ RUN      ] EphemeralBucketStatTest.VBSeqlistStats
unknown file: error: C++ exception with description "Bad dynamic_cast!" thrown in SetUp().
unknown file: error: SEH exception with code 0xc0000005 thrown in TearDown().
[  FAILED  ] EphemeralBucketStatTest.VBSeqlistStats (5 ms)
EphemeralBucketStatTest.VBSeqlistStats
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/852/ )

Timeout of a CTest test 426/427 Test  #66: ep-engine_ep_unit_tests.DurabilityRespondAmbiguousTest ........................................................................} ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/852/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/691/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/691/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/955/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [42/160]: file stats post warmup...../kv_engine/engines/ep/tests/ep_testsuite.cc:2328 Test failed: `" (Expected `250675" to be less than or equal to `245760" - Unexpected fileSize for vbucket)
[2022-12-12T07:18:32.520Z] (284 ms) FAIL
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/955/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/703/ : FAILURE

Failure of GoogleTest "TransportProtocols/XattrTest.mb25928_SystemCanExceedDocumentLimit/Mcbp_XattrYes_JsonYes_SnappyYes":

<pre>
[ RUN      ] TransportProtocols/XattrTest.mb25928_SystemCanExceedDocumentLimit/Mcbp_XattrYes_JsonYes_SnappyYes
[2022-12-12T07:30:13.660Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_neo/kv_engine/tests/testapp/testapp_xattr.cc:1916: Failure
[2022-12-12T07:30:13.660Z] Value of: resp.isSuccess()
[2022-12-12T07:30:13.660Z]   Actual: false
[2022-12-12T07:30:13.660Z] Expected: true
[2022-12-12T07:30:13.660Z] Expected to be able to store system xattrs
[2022-12-12T07:30:13.660Z] [  FAILED  ] TransportProtocols/XattrTest.mb25928_SystemCanExceedDocumentLimit/Mcbp_XattrYes_JsonYes_SnappyYes, where GetParam() = (Mcbp, XattrYes, 4-byte object <00-00 00-00>, 4-byte object <00-00 00-00>) (150 ms)
TransportProtocols/XattrTest.mb25928_SystemCanExceedDocumentLimit/Mcbp_XattrYes_JsonYes_SnappyYes
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/703/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/703/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/700/ : FAILURE

ThreadSanitizer issue: SEGV (/opt/gcc-10.2.0/lib64/libtsan.so.0+0x79a10) in __tsan_atomic8_store  ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/700/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/692/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/692/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/682/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/682/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21716/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/655/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/673/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
